--- a/main/page_item/templates/item.html
+++ b/main/page_item/templates/item.html
@@ -12,14 +12,21 @@
 
         <!-- Focused Image -->
         <div id="focused-image-container" class="mb-3">
-          <img 
+          <div style="position: relative;">
+            <img 
               id="focused-image" 
               src="{{ item.images[0].url }}" 
               alt="{{ item.title }}" 
               class="rounded focused-image" 
               loading="lazy"
               onclick="imagePopup(event)"
-           >
+            >
+            <!-- Watch Count -->
+            <span id="watch-counter" class="ms-2 badge bg-secondary">
+              <i class="fas fa-user-friends"></i> {{ item.watcher_count() }} {% if item.watcher_count() == 1 %}watcher{% else %}watchers{% endif %}
+            </span>
+          </div>
+
            <div class="modal fade image-modal">
               <div class="modal-dialog modal-dialog-centered">
                 <div class="modal-content">
@@ -49,18 +56,66 @@
       {% endif %}
     </div>
 
-    <!-- Details Column -->
-    <div class="col-md-6">
-      <h1 class="mb-2">{{ item.title | capitalize }}</h1>
+      <!-- Details Column -->
+      <div class="col-md-6">
+        <h1 class="mb-2">{{ item.title | capitalize }}</h1>
+
+      <!-- Auction Status   -->
+      <div class="mb-4">
+        <div class="d-flex gap-2">
+          <!-- Category Badge  -->
+          <span class="badge bg-info p-2" {% if item.category.description %}title="{{ item.category.description }}"{% endif %}>
+            <i class="fas fa-tag"></i> {{ item.category.name }}
+          </span>
+          <span class="badge {% if item.locked %}bg-danger{% else %}bg-success{% endif %} p-2">
+            {{ "Locked" if item.locked else "Open" }}
+          </span>
+          </span>
+          {% if is_allowed %}
+            <a href="{{ url_for('authenticate_item_page.index', url=item.authentication_requests[0].url) }}"
+              title="View authentication request"
+              class="badge mx-2 {% if item.authentication_requests[0].status == 1 %}bg-warning{% elif item.authentication_requests[0].status == 2 %}bg-success{% else %}bg-danger{% endif %} p-2">
+              {% if item.authentication_requests[0].status == 1 %}
+                Authentication Pending
+              {% elif item.authentication_requests[0].status == 2 %}
+                Authenticated
+              {% else %}
+                Authentication Declined
+              {% endif %}
+            </a>
+          {% else %}
+            <span class="badge {% if authentication == 1 %}bg-warning{% elif authentication == 2 %}bg-success{% elif authentication == 3 %}bg-danger{% else %}bg-secondary{% endif %} p-2">
+              {% if authentication == 1 %}
+                Authentication Pending
+              {% elif authentication == 2 %}
+                Authenticated
+              {% elif authentication == 3 %}
+                Authentication Declined
+              {% else %}
+                Not Authenticated
+              {% endif %}
+            </span>
+          {% endif %}
+        </div>
+      </div>
+      <hr>
+
+      <!-- Seller Info -->
+      <div class="mb-4">
+        <h5>Seller Information</h5>
+        <div>Posted by: {{ item.seller.username }}</div>
+        <div><small class="text-muted">Upload date: {{ item.upload_date.strftime('%Y-%m-%d %H:%M') }}</small></div>
+      </div>
+      <hr>
 
       <!-- Price -->
       <div class="mb-4" id="price-section">
         {% if item.highest_bid() %}
         <h5>Highest Bid</h5>
-        <p class="h3 text-primary">£{{ "%.2f"|format(item.highest_bid().bid_amount) }}</p>
+        <div class="h3 text-primary">£{{ "%.2f"|format(item.highest_bid().bid_amount) }}</div>
         {% else %}
         <h5>Starting Price</h5>
-        <p class="h3 text-primary">£{{ "%.2f"|format(item.minimum_price) }}</p>
+        <div class="h3 text-primary">£{{ "%.2f"|format(item.minimum_price) }}</div>
         {% endif %}
       </div>
 
@@ -68,13 +123,14 @@
       <div class="mb-4">
         <div class="row">
           <div class="col">
-            <p>
+            <div>
               <a href='#' class="bid-count" data-bs-toggle="modal" data-bs-target=".bid-history-modal">{{ bids|length }} bids</a>
               <span class="countdown-label">Ends in:</span> <span class="countdown" data-end="{{ item.auction_end.isoformat() }}">{{ item.auction_end.strftime('%Y-%m-%d %H:%M') }}</span>
-            </p>
+            </div>
           </div>
         </div>
       </div>
+      <hr>
 
       <!-- Bid History Modal -->
       <div class="modal fade bid-history-modal">
@@ -109,57 +165,73 @@
         </div>
       </div>
 
-      <!-- Seller Info -->
-      <div class="mb-4">
-        <h5>Seller Information</h5>
-        <p>Posted by: {{ item.seller.username }}</p>
-        <p><small class="text-muted">Upload date: {{ item.upload_date.strftime('%Y-%m-%d %H:%M') }}</small></p>
+      <!-- Bidding modal -->
+      <div class="d-grid gap-2">
+        <button 
+          type="button" 
+          class="place-bid btn btn-primary btn-lg" 
+          data-bs-toggle="modal" 
+          data-bs-target=".place-bid-modal">
+          Submit Bid
+        </button>
+      </div>
+      <div class="modal fade place-bid-modal">
+        <div class="modal-dialog modal-dialog-centered">
+          <div class="modal-content">
+            <div class="modal-header">
+              <div class="modal-title place-bid-modal-title">
+                <button type="button" class="btn-close" data-bs-dismiss="modal" ></button>
+              </div>
+            </div>
+            <div class="modal-body">
+
+              <!-- Action Buttons -->
+              {% if current_user.is_authenticated %}
+                {% if current_user.id != item.seller.id %}
+                  <form action="{{ url_for('item_page.place_bid', url=item.url) }}" method="POST" class="bid-form">
+                    <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
+                    <div class="mb-3">
+                      <label for="bid_amount" class="form-label">Your Bid Amount</label>
+                      <div class="input-group">
+                        <span class="input-group-text">£</span>
+                        <input 
+                          type="number"
+                          class="form-control"
+                          id="bid_amount"
+                          name="bid_amount"
+                          step="0.01"
+                          min="{{ suggested_bid }}"
+                          value="{{ suggested_bid }}"
+                          required
+                        >
+                      </div>
+                      <div class="form-text" id="bid-amount-help">
+                        {% if item.highest_bid() %}
+                          Current highest bid: £<span class="max-bid">{{ "%.2f"|format(item.highest_bid().bid_amount) }}</span>
+                        {% else %}
+                          Minimum bid: £{{ "%.2f"|format(item.minimum_price) }}
+                        {% endif %}
+                      </div>
+                    </div>
+                    <div class="d-grid gap-2">
+                      <button type="submit btn-close" class="btn btn-primary btn-lg" data-bs-dismiss="modal">Review Bid</button>
+                    </div>
+                  </form>
+                {% else %}
+                  <div class="alert alert-info">
+                    You are the seller of this auction so you cannot bid on it.
+                  </div>
+                {% endif %}
+            {% else %}
+              <div class="d-grid gap-2">
+                <a href="{{ url_for('auth_page.login') }}" class="btn btn-primary btn-lg">Login to Place Bid</a>
+              </div>
+            {% endif %}
+            </div>
+          </div>
+        </div>
       </div>
 
-      <!-- Action Buttons -->
-      {% if current_user.is_authenticated %}
-        {% if current_user.id != item.seller.id %}
-          <form action="{{ url_for('item_page.place_bid', url=item.url) }}" method="POST" class="bid-form">
-            <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
-            <div class="mb-3">
-              <label for="bid_amount" class="form-label">Your Bid Amount</label>
-              <div class="input-group">
-                <span class="input-group-text">£</span>
-                <input 
-                  type="number"
-                  class="form-control"
-                  id="bid_amount"
-                  name="bid_amount"
-                  step="0.01"
-                  min="{{ suggested_bid }}"
-                  value="{{ suggested_bid }}"
-                  required
-                >
-              </div>
-              <div class="form-text" id="bid-amount-help">
-                {% if item.highest_bid() %}
-                  Current highest bid: £<span class="max-bid">{{ "%.2f"|format(item.highest_bid().bid_amount) }}</span>
-                {% else %}
-                  Minimum bid: £{{ "%.2f"|format(item.minimum_price) }}
-                {% endif %}
-              </div>
-            </div>
-            
-            <div class="d-grid gap-2">
-              <button type="submit" class="btn btn-primary btn-lg">Place Bid</button>
-            </div>
-          </form>
-        {% else %}
-          <div class="alert alert-info">
-            You are the seller of this auction so you cannot bid on it.
-          </div>
-        {% endif %}
-    {% else %}
-      <div class="d-grid gap-2">
-        <a href="{{ url_for('auth_page.login') }}" class="btn btn-primary btn-lg">Login to Place Bid</a>
-      </div>
-    {% endif %}
-    
       <!-- Payment Section (Only visible if the auction is over, the user is the winner, and item is not paid) -->
       {% if show_payment %}
       <hr>
@@ -171,20 +243,19 @@
       {% endif %}
       
       <!-- Item watchers -->
-      <div class="mt-3 d-flex align-items-center">
+      <div class="d-grid gap-2">
         {% if not is_auction_over %}
-          {% if is_watching %}
-            <button id="unwatch-btn" class="btn btn-success" data-item-url="{{ item.url }}">
-              <i class="fas fa-check"></i> Watched
-            </button>
-          {% else %}
-            <button id="watch-btn" class="btn btn-outline-primary" data-item-url="{{ item.url }}">
-              <i class="fas fa-eye"></i> Watch
-            </button>
-          {% endif %}
-          <span id="watch-counter" class="ms-2 badge bg-secondary">
-            <i class="fas fa-user-friends"></i> {{ item.watcher_count() }} {% if item.watcher_count() == 1 %}watcher{% else %}watchers{% endif %}
-          </span>
+          <div class="d-grid gap-2" style="margin-top: 10px;">
+            {% if is_watching %}
+              <button id="unwatch-btn" class="btn btn-success btn-lg" data-item-url="{{ item.url }}">
+                <i class="fas fa-check"></i> Watched
+              </button>
+            {% else %}
+              <button id="watch-btn" class="btn btn-outline-primary btn-lg" data-item-url="{{ item.url }}">
+                <i class="fas fa-eye"></i> Add to Watchlist
+              </button>
+            {% endif %}
+          </div>
         {% endif %}
       </div>
 
@@ -206,48 +277,6 @@
   <div class="mb-4">
     <h5>Description</h5>
     <div class="text-break">{{ item.description }}</div>
-  </div>
-  <!-- Category Badge  -->
-  <div class="mb-2">
-    <span class="badge bg-info p-2" {% if item.category.description %}title="{{ item.category.description }}"{% endif %}>
-      <i class="fas fa-tag"></i> {{ item.category.name }}
-    </span>
-  </div>
-
-  <!-- Auction Status   -->
-  <div class="mb-4">
-    <h5>Auction Status</h5>
-    <div class="d-flex gap-3">
-      <span class="badge {% if item.locked %}bg-danger{% else %}bg-success{% endif %} p-2">
-        {{ "Locked" if item.locked else "Open" }}
-      </span>
-      </span>
-      {% if is_allowed %}
-        <a href="{{ url_for('authenticate_item_page.index', url=item.authentication_requests[0].url) }}"
-          title="View authentication request"
-          class="badge mx-2 {% if item.authentication_requests[0].status == 1 %}bg-warning{% elif item.authentication_requests[0].status == 2 %}bg-success{% else %}bg-danger{% endif %} p-2">
-          {% if item.authentication_requests[0].status == 1 %}
-            Authentication Pending
-          {% elif item.authentication_requests[0].status == 2 %}
-            Authenticated
-          {% else %}
-            Authentication Declined
-          {% endif %}
-        </a>
-      {% else %}
-        <span class="badge {% if authentication == 1 %}bg-warning{% elif authentication == 2 %}bg-success{% elif authentication == 3 %}bg-danger{% else %}bg-secondary{% endif %} p-2">
-          {% if authentication == 1 %}
-            Authentication Pending
-          {% elif authentication == 2 %}
-            Authenticated
-          {% elif authentication == 3 %}
-            Authentication Declined
-          {% else %}
-            Not Authenticated
-          {% endif %}
-        </span>
-      {% endif %}
-    </div>
   </div>
   </div>
 </div>
