--- a/main/static/css/styles.css
+++ b/main/static/css/styles.css
@@ -210,3 +210,12 @@
   align-items: center;
 }
 
+#watch-counter {
+  position: absolute;
+  top: 20px;
+  left: 10px;
+  color: white;
+  padding: 5px 10px;
+  border-radius: 5px;
+}
+
