--- a/main/static/css/home-styles.css
+++ b/main/static/css/home-styles.css
@@ -211,7 +211,7 @@
 .auction-price {
   font-weight: 700;
   font-size: 1.2rem;
-  color: var(--accent-color);
+  color: var(--primary-color);
 }
 
 .bid-count {
