--- a/main/page_home/templates/home.html
+++ b/main/page_home/templates/home.html
@@ -152,9 +152,9 @@
       <div class="col-12 col-md-8">
         <div class="row justify-content-center text-center text-md-start">
           <div class="col-12">
-            <h2 class="fw-bold">Thinking Of Selling Your <span id="about-rotating-word-container"><span id="about-rotating-word">VALUABLES?</span><span class="blinking-cursor">|</span></span></h2>
+            <h2 class="fw-bold">Thinking Of Selling?</h2>
             <h2>Let Us Handle The Details.</h2>
-            <p class="mt-4">Welcome to THE VINTAGE VAULT, where we connect sellers with authentic items to passionate collectors worldwide. Our mission is to provide a secure, transparent, and enjoyable auction experience.</p>
+            <p class="mt-4">Welcome to VINTAGE VAULT, where we connect sellers with authentic items to passionate collectors worldwide. Our mission is to provide a secure, transparent, and enjoyable auction experience.</p>
             <p>What sets us apart is our rigorous authentication process, ensuring that every item marked as "Authenticated" has been verified by our team of experts.</p>
             <p>Whether you're a seasoned collector or new to auctions, our platform offers an intuitive experience with detailed item descriptions, secure payment processing, and responsive customer service.</p>
             <a href="{{ url_for('auth_page.login') }}" class="btn btn-accent mt-3 fw-bold">CREATE AN AUCTION <i class="bi bi-arrow-right"></i></a>
