fix: invisible buttons

--- a/main/page_dashboard/templates/dashboard.html
+++ b/main/page_dashboard/templates/dashboard.html
@@ -96,7 +96,7 @@
                 <option value="2" {{ 'selected' if user.role == 2 else '' }}>Expert</option>
                 <option value="3">Manager</option>
               </select>
-              <button class="btn btn-sm btn-outline-primary update-role-btn my-sm-1">Update</button>
+              <button class="btn btn-sm btn-update update-role-btn my-sm-1">Update</button>
             </td>
           </tr>
           {% endfor %}
