--- a/main/page_item/templates/item.html
+++ b/main/page_item/templates/item.html
@@ -67,20 +67,18 @@
           <span class="badge bg-info p-2" {% if item.category.description %}title="{{ item.category.description }}"{% endif %}>
             <i class="fas fa-tag"></i> {{ item.category.name }}
           </span>
-          <span class="badge {% if item.locked %}bg-danger{% else %}bg-success{% endif %} p-2">
-            {{ "Locked" if item.locked else "Open" }}
-          </span>
-          </span>
           {% if is_allowed %}
             <a href="{{ url_for('authenticate_item_page.index', url=item.authentication_requests[0].url) }}"
               title="View authentication request"
-              class="badge mx-2 {% if item.authentication_requests[0].status == 1 %}bg-warning{% elif item.authentication_requests[0].status == 2 %}bg-success{% else %}bg-danger{% endif %} p-2">
+              class="badge mx-2 {% if item.authentication_requests[0].status == 1 %}bg-warning{% elif item.authentication_requests[0].status == 2 %}bg-success{% elif item.authentication_requests[0].status == 3 %}bg-danger{% else %}bg-secondary{% endif %} p-2">
               {% if item.authentication_requests[0].status == 1 %}
                 Authentication Pending
               {% elif item.authentication_requests[0].status == 2 %}
                 Authenticated
-              {% else %}
+              {% elif item.authentication_requests[0].status == 3 %}
                 Authentication Declined
+              {% else %}
+                Not Authenticated
               {% endif %}
             </a>
           {% else %}
